--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "clsx": "^2.1.1",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.11.11",
     "gsap": "^3.12.5",
@@ -24,6 +25,7 @@
     "react-globe.gl": "^2.27.4",
     "react-responsive": "^10.0.0",
     "react-scroll": "^1.9.0",
+    "tailwind-merge": "^2.5.4",
     "three": "^0.170.0"
   },
   "devDependencies": {
